# gam2

./: .gitignore  .lfsconfig  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  SECURITY.md  check_environment.py  lint.sh  pyproject.toml
decoupled_wbc/: __init__.py  pyproject.toml  version.py
decoupled_wbc/control/base/: env.py  humanoid_env.py  policy.py  sensor.py
decoupled_wbc/control/envs/g1/: g1_body.py  g1_env.py  g1_hand.py
decoupled_wbc/control/envs/robocasa/: async_env_server.py  sync_env.py
decoupled_wbc/control/main/: config_template.py  constants.py
decoupled_wbc/control/main/teleop/: playback_sync_sim_data.py  run_camera_viewer.py  run_g1_control_loop.py  run_g1_data_exporter.py  run_navigation_policy_loop.py  run_sim_loop.py  run_sync_sim_data_collection.py  run_teleop_policy_loop.py
decoupled_wbc/control/policy/: g1_decoupled_whole_body_policy.py  g1_gear_wbc_policy.py  identity_policy.py  interpolation_policy.py  keyboard_navigation_policy.py  lerobot_replay_policy.py  teleop_policy.py  wbc_policy_factory.py
decoupled_wbc/control/robot_model/: __init__.py  robot_model.py
decoupled_wbc/control/robot_model/instantiation/: __init__.py  g1.py
decoupled_wbc/control/robot_model/supplemental_info/: __init__.py  robot_supplemental_info.py
decoupled_wbc/control/sensor/: composed_camera.py  oak.py  sensor_server.py
decoupled_wbc/control/teleop/: teleop_retargeting_ik.py  teleop_streamer.py
decoupled_wbc/control/utils/: cv_bridge.py  episode_state.py  gear_wbc_utils.py  img_viewer.py  keyboard_dispatcher.py  logging_utils.py  n1_utils.py  network_utils.py  ros_utils.py  run_real_checklist.py  service.py  sync_sim_utils.py  telemetry.py  term_color_constants.py  text_to_speech.py
decoupled_wbc/control/visualization/: humanoid_visualizer.py  meshcat_visualizer_env.py
decoupled_wbc/dexmg/gr00trobocasa/: setup.py
decoupled_wbc/docker/: .bashrc  .tmux.conf  70-manus-hid.rules  Dockerfile.deploy  Dockerfile.deploy.base  build_deploy_base.sh  image_name.txt  kill_all_containers.sh  kill_decoupled_wbc_processors.sh  publish.sh  run_docker.sh
decoupled_wbc/docker/entrypoint/: bash.sh  deploy.sh  install_deps.sh
decoupled_wbc/scripts/: deploy_g1.py  leap_tracking_example.py  run_webcam_recorder.py
decoupled_wbc/sim2mujoco/: README.md  requirements.txt
decoupled_wbc/tests/: conftest.py
decoupled_wbc/tests/replay_data/: g1_pnpbottle.parquet
decoupled_wbc/tests/sim/: test_sim_data_collection.py
gear_sonic/: eval_agent_trl.py  eval_exp.py  pyproject.toml  train_agent_trl.py  version.py
gear_sonic/camera/: __init__.py  composed_camera.py  sensor.py  sensor_server.py
gear_sonic/camera/drivers/: dummy.py  oak.py  realsense.py  usb_camera.py
gear_sonic/config/: base.yaml  base_eval.yaml  eval_exp.yaml
gear_sonic/config/actor_critic/: mlp.yaml
gear_sonic/config/algo/: ppo_im_phc.yaml
gear_sonic/config/algo/trl/: ppo.yaml
gear_sonic/config/base/: structure.yaml
gear_sonic/config/callbacks/: im_eval.yaml  im_resample.yaml  model_save.yaml  read_eval.yaml  wandb.yaml
gear_sonic/config/manager_env/: base_env.yaml
gear_sonic/config/opt/: wandb.yaml
gear_sonic/config/trainer/: trl.yaml  trl_ppo_aux.yaml
gear_sonic/data_process/: convert_soma_csv_to_motion_lib.py  extract_soma_joints_from_bvh.py  filter_and_copy_bones_data.py  split_pkl_files.py
gear_sonic/envs/env_utils/: joint_utils.py
gear_sonic/envs/manager_env/: modular_tracking_env_cfg.py
gear_sonic/envs/wrapper/: manager_env_wrapper.py
gear_sonic/isaac_utils/: maths.py  rotations.py
gear_sonic/scripts/: launch_data_collection.py  launch_inference.py  pico_manager_thread_server.py  run_camera_viewer.py  run_data_exporter.py  run_sim_loop.py  run_vla_inference.py
gear_sonic/tests/: test_input_readers.py
gear_sonic/trl/callbacks/: hv_callback_handler.py  im_eval_callback.py  im_resample_callback.py  model_save_callback.py  read_eval_callback.py  wandb_callback.py
gear_sonic/trl/losses/: token_losses.py
gear_sonic/trl/modules/: actor_critic_modules.py  base_module.py  data_utils.py  universal_token_modules.py
gear_sonic/trl/trainer/: ppo_trainer.py  ppo_trainer_aux_loss.py
gear_sonic/trl/utils/: common.py  data.py  kornia_transform.py  math.py  order_converter.py  rl.py  rotation_conversion.py  scheduler.py  torch_transform.py
gear_sonic/utils/: average_meters.py  batch_normalizer.py  common.py  config_utils.py  inference_helpers.py  logging.py  obs_utils.py  running_mean_std.py  torch_utils.py
gear_sonic/utils/data_collection/: episode_state.py  keyboard_subscriber.py  telemetry.py  text_to_speech.py  transforms.py  zmq_state_subscriber.py
gear_sonic/utils/inference/: initial_poses.py  vla_utils.py
gear_sonic/utils/motion_lib/: motion_lib_base.py  motion_lib_robot.py  skeleton.py  torch_humanoid_batch.py
gear_sonic/utils/mujoco_sim/: base_sim.py  configs.py  image_publish_utils.py  metric_utils.py  robot.py  sensor_server.py  simulator_factory.py  unitree_sdk2py_bridge.py
gear_sonic/utils/teleop/: input_readers.py  isaac_teleop_client.py
gear_sonic_deploy/: .cmake-format.py  .editorconfig  .gitattributes  .gitignore  .justfile  CMakeLists.txt  deploy.sh  visualize_motion.py
gear_sonic_deploy/cmake/: FindTensorRT.cmake  Findonnxruntime.cmake
gear_sonic_deploy/docker/: .dockerignore  Dockerfile.ros2  run-ros2-dev.sh
gear_sonic_deploy/g1/: scene_29dof.xml  scene_empty.xml
gear_sonic_deploy/policy/: observation_config_example.yaml
gear_sonic_deploy/policy/release/: observation_config.yaml  observation_config_low_latency.yaml  observation_config_sonic_release.yaml
gear_sonic_deploy/reference/: convert_motions.py
gear_sonic_deploy/scripts/: install_deps.sh  install_ros2_humble.sh  restore_ubuntu_sources.sh  setup_env.sh  setup_wifi.sh
gear_sonic_deploy/src/: CMakeLists.txt
gear_sonic_deploy/src/TRTInference/: CMakeLists.txt  InferenceEngine.cpp  InferenceEngine.h  InferenceEngine.inl  Log.h  Utility.h
gear_sonic_deploy/src/audio_thread/: CMakeLists.txt  audio_thread.cpp  audio_thread.hpp
gear_sonic_deploy/src/g1/: CMakeLists.txt
(+463 files in other folders)
